# beeflow-websocket

./: .bandit  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml
docs/en/: README.md
docs/en/actions/: README.md
docs/en/errors/: README.md
docs/en/events/: README.md
docs/en/recipients/: README.md
docs/pl/: README.md
docs/pl/actions/: README.md
docs/pl/errors/: README.md
docs/pl/events/: README.md
docs/pl/recipients/: README.md
src/beeflow_websocket/: __init__.py
src/beeflow_websocket/core/: __init__.py  action_registry.py  autodiscover.py  event_registry.py  payloads.py  problems.py  recipient_registry.py
src/beeflow_websocket/core/actions/: __init__.py  health.py
src/beeflow_websocket/core/events/: __init__.py  health.py
src/beeflow_websocket/core/recipients/: __init__.py  websocket.py
src/beeflow_websocket/django/: __init__.py  apps.py  authentication.py  autodiscover.py  consumer.py  emitters.py  routing.py
src/beeflow_websocket/fastapi/: __init__.py  config.py  emitters.py  endpoint.py
src/beeflow_websocket/flask/: __init__.py  config.py  emitters.py  endpoint.py
tests/: django_settings.py  urls.py
tests/core/: test_core.py
tests/django/: conftest.py  test_django_adapter.py
tests/fastapi/: test_fastapi_adapter.py
tests/fixtures/autodiscover_plugins/: __init__.py
tests/fixtures/broken_autodiscover_app/: __init__.py
tests/fixtures/django_autodiscover_app/: __init__.py
tests/fixtures/fastapi_autodiscover_app/: __init__.py
tests/fixtures/flask_autodiscover_app/: __init__.py
tests/flask/: test_flask_adapter.py
(+17 files in other folders)
