[project]
name = "beeflow-websocket"
version = "0.1.0"
description = "Typed WebSocket action and event dispatch with optional framework adapters."
readme = "README.md"
authors = [
    { name = "Rafal Przetakowski", email = "rafal.p@beeflow.co.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12,<3",
]

[project.optional-dependencies]
django = [
    "channels>=4.2,<5",
    "django>=4.2,<6",
]
fastapi = [
    "fastapi>=0.115,<1",
]
flask = [
    "flask>=3.0,<4",
    "flask-sock>=0.7,<1",
]
dev = [
    "pytest>=8,<10",
    "mypy>=1.20.2",
]
django-dev = [
    "daphne>=4.2,<5",
    "pytest-django>=4.9,<5",
    "django-stubs>=6.0.3",
    "types-channels>=4.3.0.20260421",
]
fastapi-dev = [
    "httpx>=0.28,<1",
]
flask-dev = [
    "websocket-client>=1.8,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests/core"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
files = ["src/beeflow_websocket/core", "src/beeflow_websocket/__init__.py"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.black]
line-length = 120
include = '\.pyi?$'

force-exclude = '''
(
  ^scripts/mincss\.py$
| ^scripts/minjs\.py$
)
'''

exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.idea
    | \.hg
    | \.mypy_cache
    | \.tox
    | \venv
    | _build
    | buck-out
    | build
    | dist
    | webtemplate
    | fileTemplates/*
  )/
  | foo.py
)
'''

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
